...
  }

  /**
  - Description: Setup the header bar and buttons styles.
  */
  func setupHeader() {
    movieButton.setStyle(title: "Movies")
    movieButton.addTarget(self, action: #selector(setMovie), for: .touchUpInside)

    tvButton.setStyle(title: "Series")
    tvButton.addTarget(self, action: #selector(setTV), for: .touchUpInside)

    topRatedButton.setStyle(title: "Top Rated")
    topRatedButton.addTarget(self, action: #selector(setTopRated), for: .touchUpInside)

    popularButton.setStyle(title: "Popular")
    popularButton.addTarget(self, action: #selector(setPopular), for: .touchUpInside)

    upcomingButton.setStyle(title: "Upcoming")
    upcomingButton.addTarget(self, action: #selector(setUpcoming), for: .touchUpInside)
  }

  /**
  - Description: Setup the footer bar and buttons styles.
  */
  func setupFooter() {
    pageLabel.textColor = .gray

    prevButton.setTitle("PREV", for: .normal)
    prevButton.titleLabel!.textAlignment = .left
    prevButton.setTitleColor(theme, for: .normal)
    prevButton.addTarget(self, action: #selector(prevPage), for: .touchUpInside)
    prevButton.isEnabled = false
    prevButton.isHidden = false

    nextButton.setTitle("NEXT", for: .normal)
    nextButton.layer.borderColor = UIColor.white.cgColor
    nextButton.setTitleColor(inverseTheme, for: .normal)
    nextButton.titleLabel!.textAlignment = .right
    nextButton.addTarget(self, action: #selector(nextPage), for: .touchUpInside)
  }

...
